<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_station"
    android:orientation="vertical"
    tools:ignore="ButtonStyle" >

    <TextView
        android:id="@+id/tv_title_route"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_title"
        android:layout_marginBottom="8dp"
        android:background="@color/tv_titlebar"
        android:gravity="center"
        android:text="@string/tv_title_busline_online"
        android:textColor="@color/text_title"
        android:textSize="@dimen/text_large" />

    <RelativeLayout
        android:id="@+id/rl_route_et"
        android:layout_width="@dimen/width_xlarge"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_edittext"
        android:paddingBottom="1dp"
        android:paddingTop="1dp" >

        <EditText
            android:id="@+id/et_route_online"
            android:layout_width="@dimen/width_large"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/bg_station"
            android:hint="@string/et_route_search"
            android:paddingBottom="6dp"
            android:paddingLeft="9dp"
            android:paddingRight="9dp"
            android:paddingTop="6dp"
            android:textSize="@dimen/text_large" >
        </EditText>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_route"
        android:layout_width="@dimen/width_xxxlarge"
        android:layout_height="@dimen/height_btn"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_route"
            android:layout_width="@dimen/width_zero"
            android:layout_height="@dimen/height_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="searchRouteProcess"
            android:text="@string/btn_route_search" />

        <Button
            android:id="@+id/btn_opposite"
            android:layout_width="@dimen/width_zero"
            android:layout_height="@dimen/height_btn"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:onClick="SearchOppositeBusline"
            android:text="@string/btn_route_search_opposite" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         >

        <fragment
            android:id="@+id/bmapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            class="com.baidu.mapapi.map.SupportMapFragment"
            android:clickable="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignWithParentIfMissing="false"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginBottom="10dip" >

            <Button
                android:id="@+id/btn_busline_pre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/pre_"
                android:onClick="nodeClick" />

            <Button
                android:id="@+id/btn_busline_next"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/next_"
                android:onClick="nodeClick" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>